flang/test/Semantics/resolve03.f90
implicit none
integer :: x
!ERROR: No explicit type declared for 'y'
y = x
end
